Fix: Fixed CI/CD Pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-      - run: server/npm i
+      - run: npm i
+        working-directory: server
       - run: npm test
+        working-directory: server
